# StarkHacks

./: README.md  claude.md
.claude/: settings.local.json
arm/launch/: arm.launch.py
arm/ros2_pkg/: package.xml  setup.py
arm/ros2_pkg/panko_arm/: arm_control_node.py  shelf_vision.py
arm/training/: train_arm_model.py
camera/ros2_pkg/: package.xml  setup.py
camera/ros2_pkg/panko_camera/: face_recognition_node.py  stream_receiver.py
camera/rubik_pi/: npu_preprocess.py  stream_sender.py
camera/training/: finetune_face_model.py
espWebSock/: espWebSock.ino
lidar/: CLAUDE.md  CMakeLists.txt  sdkconfig  sdkconfig.defaults
lidar/main/: CMakeLists.txt  Kconfig.projbuild  main.c
mini-pc/: package-lock.json  server.js
rover/esp32/: platformio.ini
rover/esp32/src/: main.cpp
rover/launch/: rover.launch.py
rover/ros2_pkg/: package.xml  setup.py
rover/ros2_pkg/panko_rover/: app_bridge_node.py  esp32_bridge_node.py  navigation_node.py  state_machine.py
rover/training/: train_navigation.py
server/: server.py
web/: .gitignore  package.json  tsconfig.json
web/src/lib/: firebase.ts
web/src/types/: index.ts
webapp/: .gitignore  app.json  package-lock.json  package.json
webapp/app/: _layout.tsx  add-medication.tsx  sign-in.tsx
webapp/app/(tabs)/: _layout.tsx  calendar.tsx  index.tsx  run.tsx
webapp/components/home/: AddPatientModal.tsx  PatientList.tsx  (+1 more)
webapp/contexts/: AuthProvider.tsx
webapp/hooks/: useAuth.ts  useRobotState.ts  useWebSocket.ts
webapp/lib/: firebase.ts  firestore.ts  websocket.ts
webapp/types/: index.ts
(+14 files in other folders)
