<?xml version="1.0"?>
<package format="3">
  <name>panko_camera</name>
  <version>1.0.0</version>
  <description>Panko camera — face recognition inference on Mini PC</description>
  <maintainer email="yredley@vt.edu">Panko Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
