<?xml version="1.0"?>
<package format="3">
  <name>panko_rover</name>
  <version>1.0.0</version>
  <description>Panko rover — navigation, state machine, app WebSocket bridge</description>
  <maintainer email="yredley@vt.edu">Panko Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
